--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- will reference the style.css file for style-->
     <title>Calculator</title>
 </head>
 <body>
@@ -87,6 +88,7 @@
 
 
     <script src="script.js"></script>
+    <!-- will reference the script.js file for functionality-->
     
 </body>
 </html>
