--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <div class="wrapper">
         <!-- creates a class named wrapper, called later in js, div tag to make the block in the page -->
-
-        <section calss="screen">
+        <section class="screen">
             <!-- creates screen class, section tag to make content intside block related to one theme-->
             0
         </section>
